зробила посилання з кнопок

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 								mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa
 								quis enim.</div>
 							<div class="product__actions actions">
-								<div class="actions__button button ">Purchase UI Kit</div>
-								<div class="actions__button button button-lite">Learn More</div>
+								<a href="" class="actions__button button ">Purchase UI Kit</a>
+								<a href="" class="actions__button button button-lite">Learn More</a>
 							</div>
 						</div>
 
