добавила data-goto

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 					<button type="button" class="menu__icon icon-menu"><span></span></button>
 					<nav class="menu__body">
 						<ul class="menu__list menu-header__list">
-							<li class="menu__item menu-header__item"><a data-goto=".main" href=""
+							<li class="menu__item menu-header__item"><a data-goto=".main" href="#"
 									class="menu__link menu-header__link">Home </a>
 							</li>
-							<li class="menu__item menu-header__item"><a data-goto=".three" href=""
+							<li class="menu__item menu-header__item"><a data-goto=".page__two" href="#"
 									class="menu__link menu-header__link">About </a>
 							</li>
-							<li class="menu__item menu-header__item"><a href="" class="menu__link menu-header__link">Contact
+							<li class="menu__item menu-header__item"><a data-goto=".footer__bottom"  href="#" class="menu__link menu-header__link">Contact
 								</a></li>
 
 
@@ -211,11 +211,11 @@
 					<div class="footer__menu menu-footer">
 
 						<ul class=" menu-footer__list">
-							<li class=" menu-footer__item"><a href="" class=" menu-footer__link">Home </a>
+							<li class=" menu-footer__item"><a  data-goto=".main" href="" class=" menu-footer__link">Home </a>
 							</li>
-							<li class=" menu-footer__item"><a href="" class=" menu-footer__link">About </a>
+							<li class=" menu-footer__item"><a data-goto=".page__two" href="" class=" menu-footer__link">About </a>
 							</li>
-							<li class=" menu-footer__item"><a href="" class="menu-footer__link">Contact
+							<li class=" menu-footer__item"><a data-goto=".footer__bottom" href="" class="menu-footer__link">Contact
 								</a></li>
 						</ul>
 					</div>
